--- a/shop.html
+++ b/shop.html
@@ -352,7 +352,7 @@
       <p>Soft Chair</p>
       <p><b>1.900 &euro;</b></p>
       <form>
-        <button class="button1" style="height: 40px; width: 200px">
+        <button class="button1" style="height: 40px; width: 200px" formnovalidate="formnovalidate">
           View Product
         </button>
       </form>
@@ -368,7 +368,7 @@
       <p>Coffee Table</p>
       <p><b>1.100 &euro;</b></p>
       <form>
-        <button class="button2" style="height: 40px; width: 200px">
+        <button class="button2" style="height: 40px; width: 200px" formnovalidate="formnovalidate">
           View Product
         </button>
       </form>
@@ -384,7 +384,7 @@
       <p>Night Light</p>
       <p><b>870 &euro;</b></p>
       <form>
-        <button class="button3" style="height: 40px; width: 200px">
+        <button class="button3" style="height: 40px; width: 200px" formnovalidate="formnovalidate">
           View Product
         </button>
       </form>
@@ -400,7 +400,7 @@
       <p>Desk Table</p>
       <p><b>1.400 &euro;</b></p>
       <form>
-        <button class="button4" style="height: 40px; width: 200px">
+        <button class="button4" style="height: 40px; width: 200px" formnovalidate="formnovalidate">
           View Product
         </button>
       </form>
@@ -416,7 +416,7 @@
       <p>Soft Chair</p>
       <p><b>1.690 &euro;</b></p>
       <form>
-        <button class="button5" style="height: 40px; width: 200px">
+        <button class="button5" style="height: 40px; width: 200px" formnovalidate="formnovalidate">
           View Product
         </button>
       </form>
@@ -432,7 +432,7 @@
       <p>Coffee Table</p>
       <p><b>1.500 &euro;</b></p>
       <form>
-        <button class="button6" style="height: 40px; width: 200px">
+        <button class="button6" style="height: 40px; width: 200px" formnovalidate="formnovalidate">
           View Product
         </button>
       </form>
@@ -448,7 +448,7 @@
       <p>Night Light</p>
       <p><b>790 &euro;</b></p>
       <form>
-        <button class="button7" style="height: 40px; width: 200px">
+        <button class="button7" style="height: 40px; width: 200px" formnovalidate="formnovalidate">
           View Product
         </button>
       </form>
@@ -464,7 +464,7 @@
       <p>Desk Table</p>
       <p><b>1.750 &euro;</b></p>
       <form>
-        <button class="button8" style="height: 40px; width: 200px">
+        <button class="button8" style="height: 40px; width: 200px" formnovalidate="formnovalidate">
           View Product
         </button>
       </form>
