--- a/masonry.html
+++ b/masonry.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Masonry</title>
+    <link
+      rel="icon"
+      href="http://specthemes.com/dreamhouse-template/dreamhouse/img/logos/logo-shortcut.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/masonry.css" />
     <link rel="stylesheet" href="/css/footer.css" />
