INT-43 Link all pages in masonry

--- a/masonry.html
+++ b/masonry.html
@@ -34,8 +34,8 @@
               </div>
               <div class="dropdown-content">
                 <a href="home.html">HOME SLIDER</a>
-                <a href="#">HOME IMAGE</a>
-                <a href="#">HOME VIDEO</a>
+                <a href="home_image.html">HOME IMAGE</a>
+                <a href="home_video_audio.html">HOME VIDEO</a>
               </div>
             </div>
             <div class="dropdown">
@@ -46,7 +46,7 @@
               </div>
               <div class="dropdown-content">
                 <a href="masonry.html">PROJECT MASONRY</a>
-                <a href="#">PROJECT GRID</a>
+                <a href="grid.html">PROJECT GRID</a>
                 <a href="#">PROJECT DETAIL</a>
               </div>
             </div>
