--- a/shop.html
+++ b/shop.html
@@ -13,6 +13,7 @@
       href="http://specthemes.com/dreamhouse-template/dreamhouse/img/logos/logo-shortcut.png"
       type="image/x-icon"
     />
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <style>
       * {
@@ -265,6 +266,47 @@
     if (!formValid) alert("Must check some option!");
     return formValid;
    }
+	    //mouseenter()-View Product//
+      $(document).ready(function(){
+        $(".button1").mouseenter(function(){
+          alert("View Product");
+        });
+      });
+      $(document).ready(function(){
+        $(".button2").mouseenter(function(){
+          alert("View Product");
+        });
+      });
+      $(document).ready(function(){
+        $(".button3").mouseenter(function(){
+          alert("View Product");
+        });
+      });
+      $(document).ready(function(){
+        $(".button4").mouseenter(function(){
+          alert("View Product");
+        });
+      });
+      $(document).ready(function(){
+        $(".button5").mouseenter(function(){
+          alert("View Product");
+        });
+      });
+      $(document).ready(function(){
+        $(".button6").mouseenter(function(){
+          alert("View Product");
+        });
+      });
+      $(document).ready(function(){
+        $(".button7").mouseenter(function(){
+          alert("View Product");
+        });
+      });
+      $(document).ready(function(){
+        $(".button8").mouseenter(function(){
+          alert("View Product");
+        });
+      });
     </script>
   </head>
   <header>
