--- a/shopdetail.html
+++ b/shopdetail.html
@@ -348,8 +348,8 @@
         }
     </script>
       <br>
-      <p style="color: darkblue"><b>Category:</b></p>
-      <p style="color: grey">Interior/ Arm</p>
+      <p style="color: darkblue" id="flip"><b>Category:</b></p>
+      <p style="color: grey" id="panel">Interior/ Arm</p>
     </div>
 
     <form>
