--- a/shopdetail.html
+++ b/shopdetail.html
@@ -13,6 +13,7 @@
       href="http://specthemes.com/dreamhouse-template/dreamhouse/img/logos/logo-shortcut.png"
       type="image/x-icon"
     />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <style>
       * {
         font-family: "Montserrat", sans-serif;
