--- a/shopdetail.html
+++ b/shopdetail.html
@@ -194,6 +194,12 @@
     var x = document.getElementById("myOutput").name;
     document.getElementById("demo").innerHTML = x;
   }
+      //slideToggle()//
+  $(document).ready(function(){
+  $("#flip").click(function(){
+    $("#panel").slideToggle("slow");
+  });
+});
   </script>
   </head>
   <header>
