--- a/contact.html
+++ b/contact.html
@@ -298,6 +298,12 @@
           $(this).css("background-color","beige");
         });
       });
+        //get//
+        $(document).ready(function(){
+      $("#submit").click(function(){
+       alert("Value: " + $("#usr_name").val());
+       });
+     });
     </script>
 </head>
 <header>
