INT-44: Modify contact, home, home_image, shop, shopdetail

--- a/contact.html
+++ b/contact.html
@@ -306,7 +306,7 @@
      });
     </script>
 </head>
-<header>
+    <header>
       <div class="wrapper">
         <div class="header">
           <a href="/home.html" id="logo">
@@ -331,11 +331,13 @@
             </div>
             <div class="dropdown">
               <div class="dropdown__main">
-                <a href="#">PROJECTS <i class="fas fa-angle-down"></i></a>
+                <a href="masonry.html"
+                  >PROJECTS <i class="fas fa-angle-down"></i
+                ></a>
               </div>
               <div class="dropdown-content">
-                <a href="#">PROJECT MASONRY</a>
-                <a href="#">PROJECT GRID</a>
+                <a href="masonry.html">PROJECT MASONRY</a>
+                <a href="grid.html">PROJECT GRID</a>
                 <a href="#">PROJECT DETAIL</a>
               </div>
             </div>
