--- a/home.html
+++ b/home.html
@@ -43,6 +43,7 @@
                 <a href="home.html">HOME SLIDER</a>
                 <a href="home_image.html">HOME IMAGE</a>
                 <a href="home_video_audio.html">HOME VIDEO</a>
+                <a href="home_drag_drop.html">HOME DRAG</a>
               </div>
             </div>
             <div class="dropdown">
