--- a/home_image.html
+++ b/home_image.html
@@ -136,7 +136,6 @@
           </div>
         </div>
       </section>
-
       <section>
         <div class="wrapper">
           <h3 class="about_us__article-heading" style="margin-top: 40px">
@@ -254,6 +253,7 @@
           </div>
         </div>
       </section>
+
       <div class="wrapper">
         <article class="about_us__article">
           <aside class="about_us__article__aside">
@@ -668,7 +668,7 @@
       /></a>
     </div>
   </body>
-  <script src="js/drag_drop.js"></script>
-  <script src="js/teamWork.js"></script>
+
+  <script src="js/home_images.js"></script>
   <script src="js/canvas.js"></script>
 </html>
