INT-45 Moodify masonry

--- a/masonry.html
+++ b/masonry.html
@@ -91,11 +91,7 @@
         <div class="wrapper">
           <div class="grid-wrapper">
             <div class="rotate_image_X">
-              <img
-                class="masonry_images"
-                src="https://cdn.pixabay.com/photo/2016/11/18/17/46/house-1836070_960_720.jpg"
-                alt=""
-              />
+              <img class="masonry_images" src="images/house1.webp" alt="" />
             </div>
             <div class="rotate_image_X">
               <img
@@ -134,11 +130,7 @@
               />
             </div>
             <div class="big">
-              <img
-                class="masonry_images"
-                src="https://cdn.pixabay.com/photo/2016/11/18/17/46/house-1836070_960_720.jpg"
-                alt=""
-              />
+              <img class="masonry_images" src="images/house1.webp" alt="" />
             </div>
             <div class="rotate_image_Y">
               <img
