INT-45 Modify masonry

--- a/masonry.html
+++ b/masonry.html
@@ -94,11 +94,7 @@
               <img class="masonry_images" src="images/house1.webp" alt="" />
             </div>
             <div class="rotate_image_X">
-              <img
-                class="masonry_images"
-                src="https://i.pinimg.com/564x/c9/aa/f8/c9aaf8853557c381c80ee827db0dad64.jpg"
-                alt=""
-              />
+              <img class="masonry_images" src="images/house2.jpg" alt="" />
             </div>
             <div class="tall">
               <img
