--- a/masonry.html
+++ b/masonry.html
@@ -91,91 +91,207 @@
         <div class="wrapper">
           <div class="grid-wrapper">
             <div class="rotate_image_X">
-              <img class="masonry_images" src="images/house1.webp" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house1.webp"
+                alt="image of house"
+              />
             </div>
             <div class="rotate_image_X">
-              <img class="masonry_images" src="images/house2.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house2.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="tall">
-              <img class="masonry_images" src="images/house3.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house3.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="wide">
-              <img class="masonry_images" src="images/house4.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house4.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="rotate_image_X">
-              <img class="masonry_images" src="images/house5.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house5.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="tall">
-              <img class="masonry_images" src="images/house16.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house16.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="big">
-              <img class="masonry_images" src="images/house1.webp" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house1.webp"
+                alt="image of house"
+              />
             </div>
             <div class="rotate_image_Y">
-              <img class="masonry_images" src="images/house17.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house17.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="wide">
-              <img class="masonry_images" src="images/house5.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house5.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="big">
-              <img class="masonry_images" src="images/house6.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house6.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="tall">
-              <img class="masonry_images" src="images/house8.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house8.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="rotate_image_Y">
-              <img class="masonry_images" src="images/house6.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house6.jpg"
+                alt="image of house"
+              />
             </div>
             <div>
-              <img class="masonry_images" src="images/house7.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house7.jpg"
+                alt="image of house"
+              />
             </div>
             <div>
-              <img class="masonry_images" src="images/house9.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house9.jpg"
+                alt="image of house"
+              />
             </div>
             <div>
-              <img class="masonry_images" src="images/house18.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house18.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="wide">
-              <img class="masonry_images" src="images/house10.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house10.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="transorm_images_3d">
-              <img class="masonry_images" src="images/house11.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house11.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="transorm_images_3d">
-              <img class="masonry_images" src="images/house18.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house18.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="wide">
-              <img class="masonry_images" src="images/house19.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house19.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="transorm_images_3d">
-              <img class="masonry_images" src="images/house11" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house11"
+                alt="image of house"
+              />
             </div>
             <div class="wide">
-              <img class="masonry_images" src="images/house12.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house12.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="big">
-              <img class="masonry_images" src="images/house9.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house9.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="transorm_images_3d">
-              <img class="masonry_images" src="images/house10.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house10.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="transorm_images_3d">
-              <img class="masonry_images" src="images/house13.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house13.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="big">
-              <img class="masonry_images" src="images/house14.png" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house14.png"
+                alt="image of house"
+              />
             </div>
             <div class="tall">
-              <img class="masonry_images" src="images/house13.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house13.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="transorm_images_3d">
-              <img class="masonry_images" src="images/house15.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house15.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="transorm_images_3d">
-              <img class="masonry_images" src="images/house12.jpg" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house12.jpg"
+                alt="image of house"
+              />
             </div>
             <div class="wide">
-              <img class="masonry_images" src="images/house14.png" alt="" />
+              <img
+                class="masonry_images"
+                src="images/house14.png"
+                alt="image of house"
+              />
             </div>
           </div>
         </div>
