INT-45 Modify masonry

--- a/masonry.html
+++ b/masonry.html
@@ -5,11 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Masonry</title>
-    <link
-      rel="icon"
-      href="http://specthemes.com/dreamhouse-template/dreamhouse/img/logos/logo-shortcut.png"
-      type="image/x-icon"
-    />
+    <link rel="icon" href="images/logo1.png" type="image/x-icon" />
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/masonry.css" />
     <link rel="stylesheet" href="/css/footer.css" />
@@ -226,7 +222,7 @@
             <div class="transorm_images_3d">
               <img
                 class="masonry_images"
-                src="images/house11"
+                src="images/house11.jpg"
                 alt="image of house"
               />
             </div>
@@ -302,10 +298,7 @@
       <div class="wrapper">
         <div class="footer-content">
           <div class="footer-content__main">
-            <img
-              src="http://specthemes.com/dreamhouse-template/dreamhouse/img/logos/logo-footer.png"
-              alt="logo"
-            />
+            <img src="images/logo2.png" alt="logo" />
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
               lacinia magna vel molestie faucibus.
