--- a/contact.html
+++ b/contact.html
@@ -117,6 +117,15 @@
         width:100%;
         position:absolute;
         }
+        .position{
+          color:white;
+          background-color: rgb(78, 9, 9);
+          text-align: center;
+          height: 40px;
+          width: 180px;
+          margin-right: 150px;
+          margin-left: 150px;
+        }
            .footer-content {
         display: flex;
         justify-content: space-between;
