--- a/grid.html
+++ b/grid.html
@@ -43,6 +43,7 @@
                 <a href="home.html">HOME SLIDER</a>
                 <a href="home_image.html">HOME IMAGE</a>
                 <a href="home_video_audio.html">HOME VIDEO</a>
+                <a href="home_drag_drop.html">HOME DRAG</a>
               </div>
             </div>
             <div class="dropdown">
@@ -107,90 +108,58 @@
         </div>
         <div class="row">
           <!--1st gallery item start -->
-          <div class="gallery-item shoe">
+          <div class="gallery-item home">
             <div class="gallery-item-inner">
-              <img
-                class="grid_img"
-                src="http://specthemes.com/dreamhouse-template/dreamhouse/img/projects/long-1.jpg"
-                alt="shoe"
-              />
+              <img class="grid_img" src="images/house1.webp" alt="home" />
             </div>
           </div>
 
           <!--2nd gallery item start -->
           <div class="gallery-item design">
             <div class="gallery-item-inner">
-              <img
-                class="grid_img"
-                src="	http://specthemes.com/dreamhouse-template/dreamhouse/img/content/home-pr-1.jpg"
-                alt="design"
-              />
+              <img class="grid_img" src="images/house12.jpg" alt="design" />
             </div>
           </div>
 
           <!--3rd gallery item start -->
           <div class="gallery-item Interior">
             <div class="gallery-item-inner">
-              <img
-                class="grid_img"
-                src="http://specthemes.com/dreamhouse-template/dreamhouse/img/projects/long-6.jpg"
-                alt="Interior"
-              />
+              <img class="grid_img" src="images/house7.jpg" alt="Interior" />
             </div>
           </div>
 
           <!--4th gallery item start -->
           <div class="gallery-item design">
             <div class="gallery-item-inner">
-              <img
-                class="grid_img"
-                src="http://specthemes.com/dreamhouse-template/dreamhouse/img/projects/long-4.jpg"
-                alt="design"
-              />
+              <img class="grid_img" src="images/house11.jpg" alt="design" />
             </div>
           </div>
 
           <!--5th gallery item start -->
           <div class="gallery-item Interior">
             <div class="gallery-item-inner">
-              <img
-                class="grid_img"
-                src="	http://specthemes.com/dreamhouse-template/dreamhouse/img/projects/grid_2/g2_4.png"
-                alt="Interior"
-              />
+              <img class="grid_img" src="images/house19.jpg" alt="Interior" />
             </div>
           </div>
 
           <!--6th gallery item end -->
           <div class="gallery-item Exterior">
             <div class="gallery-item-inner">
-              <img
-                class="grid_img"
-                src="http://specthemes.com/dreamhouse-template/dreamhouse/img/projects/long-5.jpg"
-                alt="Exterior"
-              />
+              <img class="grid_img" src="images/house8.jpg" alt="Exterior" />
             </div>
           </div>
 
           <!--7th gallery item end -->
           <div class="gallery-item Interior">
             <div class="gallery-item-inner">
-              <img
-                class="grid_img"
-                src="http://specthemes.com/dreamhouse-template/dreamhouse/img/projects/2.jpg"
-                alt="Interior"
-              />
+              <img class="grid_img" src="images/house4.jpg" alt="Interior" />
             </div>
           </div>
 
           <!--8th gallery item end -->
           <div class="gallery-item home">
             <div class="gallery-item-inner">
-              <img
-                class="grid_img"
-                src="	http://specthemes.com/dreamhouse-template/dreamhouse/img/projects/grid_2/g2_2.png"
-                alt="home"
-              />
+              <img class="grid_img" src="images/house6.jpg" alt="home" />
             </div>
           </div>
 
@@ -199,7 +168,7 @@
             <div class="gallery-item-inner">
               <img
                 class="grid_img"
-                src="http://specthemes.com/dreamhouse-template/dreamhouse/img/projects/grid_2/g2_1.png
+                src="images/house7.jpg
 "
                 alt="home"
               />
@@ -341,5 +310,16 @@
         });
       }
     });
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+  <script>
+    setInterval(function () {
+      $(".gallery")
+        .animate({ backgroundColor: "#F6F6FE" }, 3000)
+        .animate({ backgroundColor: "#FBFAFC" }, 3000)
+        .animate({ backgroundColor: "#F5FCFF" }, 3000)
+        .animate({ backgroundColor: "#F1FEFD" }, 3000);
+    }, 100);
   </script>
 </html>
