--- a/blog_list.html
+++ b/blog_list.html
@@ -11,9 +11,22 @@
       integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
       crossorigin="anonymous"
     />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+<!-- Kodi ne JQuery per animation efekt -->
+    <script>
+      $(document).ready(function(){
+          $("button").click(function(){
+              $(".boxxx").animate({
+                  width: 'toggle'
+              });
+          });
+      });
+      </script>
   </head>
 
   <body>
+
     <!-- KODI per Header -->
     <header>
       <div class="wrapper">
@@ -34,17 +47,19 @@
               </div>
               <div class="dropdown-content">
                 <a href="home.html">HOME SLIDER</a>
-                <a href="#">HOME IMAGE</a>
-                <a href="#">HOME VIDEO</a>
+                <a href="home_image.html">HOME IMAGE</a>
+                <a href="home_video_audio.html">HOME VIDEO</a>
               </div>
             </div>
             <div class="dropdown">
               <div class="dropdown__main">
-                <a href="#">PROJECTS <i class="fas fa-angle-down"></i></a>
+                <a href="masonry.html"
+                  >PROJECTS <i class="fas fa-angle-down"></i
+                ></a>
               </div>
               <div class="dropdown-content">
-                <a href="#">PROJECT MASONRY</a>
-                <a href="#">PROJECT GRID</a>
+                <a href="masonry.html">PROJECT MASONRY</a>
+                <a href="grid.html">PROJECT GRID</a>
                 <a href="#">PROJECT DETAIL</a>
               </div>
             </div>
@@ -84,6 +99,7 @@
       </div>
     </header>
 
+<!-- Vija nen navbar e bere me canvas -->
     
     <canvas id="canvas1">Your browser does not support the HTML5 canvas tag.</canvas>
      <script>
@@ -113,6 +129,7 @@
       </div>
     </section>
     <br /><br /><br />
+
 
     <!-- Pjesa fotove me pershkrim anash  -->
 
@@ -231,7 +248,7 @@
                   <a href="#"><button class="butoni">ARCHITECTURE</button></a>
                 </div>
 
-                <br /><br />
+                <br/><br/>
                 <a href="#" class="blog-list-teksti"
                   >Lorem ipsem is simply a dummy text of the printing and
                   typesetting.</a
@@ -255,7 +272,7 @@
                 <br />
                 <div><button class="butoni2">Read More</button></div>
               </div>
-            </div>
+            </div> 
           </div>
         </div>
       </div>
@@ -309,6 +326,73 @@
       </div>
     </div>
 
+
+
+<!-- Pjesa ku gjendet ekekti animation -->
+
+<div class="diviiii" style="width: 80%;">
+ 
+ 
+    <div > 
+          <p class="show-SERVICE-planning">SERVICES PLANNING</p>
+          <hr class="hr"><br>
+          <!-- Butoni -->
+          <button type="button" class="button_service">Click to show or hide service planning.</button>
+          <div class="boxxx">
+              <div class="service_planning">
+                <p class="service_planning_heading"><br>Service planning</p><br><br>
+                <ul style="list-style-type:none" class="lista_service_planning">
+                  <li> <span class="numrat">01:</span> &nbsp;&nbsp; Best Cuality</li><br>
+                  <li> <span class="numrat">02:</span> &nbsp;&nbsp; General Contracting</li><br>
+                  <li> <span class="numrat">03:</span> &nbsp;&nbsp; House Security</li><br>
+                  <li> <span class="numrat">04:</span> &nbsp;&nbsp; Construction Consultant</li><br>
+                </ul>
+              </div><br><br><br><br>
+         </div>
+  </div>
+
+
+  <div> 
+    <p class="show-SERVICE-planning">SERVICES PLANNING</p>
+    <hr class="hr"><br>
+    <!-- Butoni -->
+    <button type="button" class="button_service">Click to show or hide service planning.</button>
+    <div class="boxxx">
+        <div class="service_planning">
+          <p class="service_planning_heading"><br>Service planning</p><br><br>
+          <ul style="list-style-type:none" class="lista_service_planning">
+            <li> <span class="numrat">01:</span> &nbsp;&nbsp; Best Cuality</li><br>
+            <li> <span class="numrat">02:</span> &nbsp;&nbsp; General Contracting</li><br>
+            <li> <span class="numrat">03:</span> &nbsp;&nbsp; House Security</li><br>
+            <li> <span class="numrat">04:</span> &nbsp;&nbsp; Construction Consultant</li><br>
+          </ul>
+        </div><br><br><br><br>
+   </div>
+</div>
+
+
+<div> 
+  <p class="show-SERVICE-planning">SERVICES PLANNING</p>
+  <hr class="hr"><br>
+  <!-- Butoni -->
+  <button type="button" class="button_service">Click to show or hide service planning.</button>
+  <div class="boxxx">
+      <div class="service_planning">
+        <p class="service_planning_heading"><br>Service planning</p><br><br>
+        <ul style="list-style-type:none" class="lista_service_planning">
+          <li> <span class="numrat">01:</span> &nbsp;&nbsp; Best Cuality</li><br>
+          <li> <span class="numrat">02:</span> &nbsp;&nbsp; General Contracting</li><br>
+          <li> <span class="numrat">03:</span> &nbsp;&nbsp; House Security</li><br>
+          <li> <span class="numrat">04:</span> &nbsp;&nbsp; Construction Consultant</li><br>
+        </ul>
+      </div><br><br><br><br>
+ </div>
+</div>
+
+</div>
+
+
+
     <!-- Pjesa e fundit, para footerit, "Great Clients" me foto levizese. -->
 
     <table width="95%">
@@ -340,6 +424,8 @@
       </tr>
     </table>
 
+
+    <!-- Footer -->
     <footer class="footer">
       <div class="wrapper">
         <div class="footer-content">
@@ -441,5 +527,18 @@
         </div>
       </div>
     </footer>
+
+
+
+    <!-- Butoni scroll up  -->
+
+<div class="scroll-to-top">
+  <a href="#logo"
+    ><img class="up-arrow" src="images/uparrow.png" alt="up arrow"
+  /></a>
+</div>
+
+
+
   </body>
 </html>
