INT-54 Modify home_video_audio.html

--- a/home_video_audio.html
+++ b/home_video_audio.html
@@ -98,15 +98,9 @@
         <div class="wrapper">
           <div class="videos">
             <div>
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/zDo0H8Fm7d0"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
+              <video width="560" height="315" controls>
+                <source src="/video/video1.mp4" type="video/mp4" />
+              </video>
               <figure>
                 <figcaption>Listen Bebe Rexha:</figcaption>
                 <audio
@@ -120,15 +114,9 @@
             </div>
 
             <div>
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/oygrmJFKYZY"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
+              <video width="560" height="315" controls>
+                <source src="/video/video1.mp4" type="video/mp4" />
+              </video>
               <figure>
                 <figcaption>Listen Dua Lipa:</figcaption>
                 <audio
@@ -278,11 +266,12 @@
             <h3 class="milwaukee_summer_house-heading">03</h3>
             <h1 class="milwaukee_summer_house-title">Milwaukee Summer House</h1>
             <hr class="milwaukee_summer_house-line" />
-            <br class="milwaukee_summer_house-paragraph">
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+            <br class="milwaukee_summer_house-paragraph" />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
               lacinia magna vel molestie faucibus. Donec auctor et urnaLorem
               ipsum dolor sit amet, consectetur adipiscing elit. Cras lacinia
-              magna vel molestie.</br>
+              magna vel molestie.
             </p>
           </aside>
         </article>
